--- a/canvas.html
+++ b/canvas.html
@@ -107,6 +107,6 @@ Shape: <select oninput="window.shape = this.value;">
   <option value="star">Star</option>
   <option value="david">Star of David</option>
 </select><br>
-Size: <input type="number" oninput="if (!isNaN(this.value)) window.size = +this.value;" value="20" min="1" max="500">
+Size: <input type="number" oninput="if (!isNaN(this.value)) window.size = +this.value;" value="20" step="any" min="0" max="500">
 </pre></body>
 </html>
