Increased chevron size

--- a/star.html
+++ b/star.html
@@ -85,6 +85,10 @@ body {
     cursor: pointer;
 }
 
+.controls .fa::before {
+    font-size: 1.2em;
+}
+
 .star {
     display: block;
     margin-top: 10em;
