removed errant closing tags

--- a/star.html
+++ b/star.html
@@ -103,7 +103,7 @@ body {
 <script src="https://use.fontawesome.com/2b1a6efa59.js" async></script>
 </head>
 <body>
-</div>
+
 <div class="main-content">
 <h1 class="centred-text">Stars</h1>
 
@@ -115,7 +115,7 @@ body {
       <span class="fa fa-chevron-down fa-lg points-down" onclick="window.a(-1, 'points');"></span>
     </div>
     <div class="float-left">
-      <input type="number" min="0" step="1" value="5" id="points" oninput="window.u();" onclick="window.u();"></input>
+      <input type="number" min="0" step="1" value="5" id="points" oninput="window.u();" onclick="window.u();">
     </div>
   </div></div>
   <div class="float-right right"><div class="float-left">
@@ -125,7 +125,7 @@ body {
       <span class="fa fa-chevron-down fa-lg skip-down" onclick="window.a(-1, 'skip');"></span>
     </div>
     <div class="float-right">
-      <input type="number" min="0" step="1" value="3" id="skip" oninput="window.u();" onclick="window.u();"></input>
+      <input type="number" min="0" step="1" value="3" id="skip" oninput="window.u();" onclick="window.u();">
     </div>
   </div></div>
 </div>
