Tweaked colour of filled star

--- a/star.html
+++ b/star.html
@@ -311,7 +311,7 @@ body {
     }
     var fill = window.fill_mode && (skip !== n / 2);
     var lines = '<path style="' + (fill ?
-      'fill-rule:evenodd' :
+      'fill-rule:evenodd;fill:#7f7f7f' :
       'fill-opacity:0;stroke:black;stroke-width:' + (3 * multiplier)
     ) + '" d="';  // />
     while (true) {
